--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   ],
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
-    "build": "tsc",
+    "build": "npm run clean && tsc",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "test": "node --import tsx/esm --test tests/*.test.ts",
     "test:coverage": "node --import tsx/esm --test --experimental-test-coverage tests/*.test.ts",
+    "benchmark": "node --import tsx/esm benchmark/engine.bench.ts",
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
