--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/node": "^22.19.3",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-sonarjs": "^3.0.5",
     "eslint-plugin-unused-imports": "^4.3.0",
     "prettier": "^3.7.4",
     "tsx": "^4.21.0",
