--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   ],
   "scripts": {
     "clean": "node -e \"const fs=require('fs'); fs.rmSync('dist',{recursive:true,force:true}); fs.rmSync('tsconfig.tsbuildinfo',{force:true});\"",
-    "build": "npm run clean && tsc",
+    "build": "tsc",
+    "build:clean": "npm run clean && tsc",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "test": "node --import tsx/esm --test tests/*.test.ts",
@@ -30,7 +31,7 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "inspector": "npx @modelcontextprotocol/inspector",
-    "prepublishOnly": "npm run lint && npm run type-check && npm run build"
+    "prepublishOnly": "npm run lint && npm run type-check && npm run build:clean"
   },
   "keywords": [
     "mcp",
