--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "README.md"
   ],
   "scripts": {
-    "clean": "node -e \"const fs=require('fs'); fs.rmSync('dist',{recursive:true,force:true}); fs.rmSync('tsconfig.tsbuildinfo',{force:true});\"",
+    "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true})\"",
     "build": "tsc",
-    "build:clean": "npm run clean && tsc",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "test": "node --import tsx/esm --test tests/*.test.ts",
@@ -31,7 +30,7 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "inspector": "npx @modelcontextprotocol/inspector",
-    "prepublishOnly": "npm run lint && npm run type-check && npm run build:clean"
+    "prepublishOnly": "npm run lint && npm run type-check && npm run build"
   },
   "keywords": [
     "mcp",
