--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
-    "test": "node --import tsx/esm --test tests/*.test.ts",
-    "test:coverage": "node --import tsx/esm --test --experimental-test-coverage tests/*.test.ts",
+    "test": "npm run build && node --import tsx/esm --test tests/*.test.ts",
+    "test:coverage": "npm run build && node --import tsx/esm --test --experimental-test-coverage tests/*.test.ts",
     "benchmark": "node --import tsx/esm benchmark/engine.bench.ts",
     "lint": "eslint .",
     "format": "prettier --write .",
