Refactor ThinkingEngine and related modules for improved structure and error handling
- Enhanced the processThought method in ThinkingEngine to streamline thought processing and result building.
- Introduced helper methods for creating and storing thoughts, improving code readability.
- Added a new engineWorkerHandler to manage worker messages and errors more effectively.
- Implemented detailed error handling in the worker engine client, including timeout and exit scenarios.
- Updated diagnostics and tool registration to support new features and error reporting.
- Added comprehensive tests for engine processing, worker handling, and tool registration.
- Adjusted TypeScript configurations to exclude test files from linting.

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*", "tests/**/*", "benchmark/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "tests"]
 }
