refactor: enhance test scripts and improve error handling in stdio guards

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
-    "test": "npm run build && node --import tsx/esm --test tests/*.test.ts",
+    "test": "node --import tsx/esm --test tests/*.test.ts",
+    "test:ci": "npm run build && npm test",
     "test:coverage": "npm run build && node --import tsx/esm --test --experimental-test-coverage tests/*.test.ts",
     "benchmark": "node --import tsx/esm benchmark/engine.bench.ts",
     "lint": "eslint .",
