--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "README.md"
   ],
   "scripts": {
-    "clean": "node -e \"require('fs').rmSync('dist', {recursive:true, force:true}); ['tsconfig.tsbuildinfo', 'tsconfig.build.tsbuildinfo', 'tsconfig.test.tsbuildinfo'].forEach(f => require('fs').rmSync(f, {force:true}))\"",
-    "validate:instructions": "node -e \"require('fs').accessSync('src/instructions.md')\"",
-    "build": "npm run clean && tsc -p tsconfig.build.json && npm run validate:instructions && npm run copy:assets && node -e \"require('fs').chmodSync('dist/index.js', '755')\"",
-    "copy:assets": "node -e \"require('fs').copyFileSync('src/instructions.md', 'dist/instructions.md')\"",
-    "prepare": "npm run build",
+    "clean": "node scripts/clean.mjs",
+    "validate:instructions": "node scripts/validate.mjs",
+    "build": "npm run clean && tsc -p tsconfig.build.json && npm run validate:instructions && node scripts/assets.mjs",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "test": "node --import tsx/esm --test tests/*.test.ts",
