--- a/package.json
+++ b/package.json
@@ -18,19 +18,24 @@
     "README.md"
   ],
   "scripts": {
-    "clean": "node scripts/clean.mjs",
-    "validate:instructions": "node scripts/validate.mjs",
-    "build": "npm run clean && tsc -p tsconfig.build.json && npm run validate:instructions && node scripts/assets.mjs",
-    "dev": "tsx watch src/index.ts",
+    "clean": "node scripts/tasks.mjs clean",
+    "validate:instructions": "node scripts/tasks.mjs validate:instructions",
+    "build": "node scripts/tasks.mjs build",
+    "copy:assets": "node scripts/tasks.mjs copy:assets",
+    "prepare": "npm run build",
+    "dev": "tsc --watch --preserveWatchOutput",
+    "dev:run": "node --env-file=.env --watch dist/index.js",
     "start": "node dist/index.js",
-    "test": "node --import tsx/esm --test tests/*.test.ts",
-    "test:ci": "npm run build && npm test",
-    "test:coverage": "npm run build && node --import tsx/esm --test --experimental-test-coverage tests/*.test.ts",
-    "benchmark": "node --import tsx/esm benchmark/engine.bench.ts",
-    "lint": "eslint .",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit",
+    "type-check": "node scripts/tasks.mjs type-check",
+    "type-check:diagnostics": "tsc --noEmit --extendedDiagnostics",
+    "type-check:trace": "node -e \"require('fs').rmSync('.ts-trace',{recursive:true,force:true})\" && tsc --noEmit --generateTrace .ts-trace",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "node scripts/tasks.mjs test",
+    "test:coverage": "node scripts/tasks.mjs test --coverage",
+    "knip": "knip",
+    "knip:fix": "knip --fix",
     "inspector": "npx @modelcontextprotocol/inspector",
     "prepublishOnly": "npm run lint && npm run type-check && npm run build"
   },
