--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
   },
-  "sideEffects": false,
   "bin": {
     "thinkseq": "dist/index.js"
   },
@@ -53,13 +56,13 @@
   "homepage": "https://github.com/j0hanz/thinkseq-mcp-server#readme",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.25.3",
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@trivago/prettier-plugin-sort-imports": "^6.0.2",
-    "@types/node": "^25.2.0",
+    "@types/node": "^24",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-de-morgan": "^2.0.0",
@@ -72,6 +75,6 @@
     "typescript-eslint": "^8.54.0"
   },
   "engines": {
-    "node": ">=22.0.0"
+    "node": ">=24"
   }
 }
